# pytest-plugin-skeleton

./: README.md  pyproject.toml
pytest_plugin_skeleton/: plugin.py
