[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-plugin-skeleton"
description = "A pytest plugin skeleton"
authors = [
    {name = "Sheila Kahwai", email = "sheilankw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest"
]
dependencies = [
    "pytest"
]
dynamic = ["version"]

[project.optional.dependencies]
test = [
    "pytest"
]

[project.urls]
Source = "https://github.com/Sheila-nk/pytest-plugin-skeleton.git"

[tool.pytest.ini_options]
addopts = "--verbose --color=yes"

[project.entry-points.pytest11]
plugin-skeleton = "pytest_plugin_skeleton.plugin"
